fix(app): responsive styles on small screens (content padding)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -57,6 +57,12 @@ mat-sidenav-container {
       position: relative;
     }
 
+    @media (max-width: map-get($grid-breakpoints, sm)) {
+      .content {
+        padding-top: 54px;
+      }
+    }
+
     .footer {
       flex: 0 0 auto;
       padding: 0 15px;
